# chatbot_lab

./: README.md  app.py  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 6788ff57a723_add_original_name_column.py  c0a462ba2c51_rename_date_column_to_created_at_in_.py
sql_app/: crud.py  main.py  models.py  schemas.py
