[tool.poetry]
name = "chatbot-lab"
version = "0.1.0"
description = ""
authors = ["kizataka <chongxiongmu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
langchain = "^0.0.335"
openai = "^1.2.4"
chromadb = "^0.4.17"
tiktoken = "^0.5.1"
pypdf = "^3.17.0"
requests = "^2.31.0"
pandas = "^2.1.3"
streamlit = "^1.28.2"
streamlit-option-menu = "^0.3.6"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
pydantic = "^2.5.0"
alembic = "^1.12.1"
uvicorn = "^0.24.0.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
