[tool.poetry]
name = "chatbot-lab"
version = "0.1.0"
description = ""
authors = ["kizataka <chongxiongmu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
chromadb = "0.3.29"
pydantic = "1.9"
fastapi = "0.85.1"
langchain = "^0.0.339"
openai = "^1.3.4"
tiktoken = "^0.5.1"
pypdf = "^3.17.1"
requests = "^2.31.0"
pandas = "^2.1.3"
streamlit = "^1.28.2"
streamlit-option-menu = "^0.3.6"
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
uvicorn = "^0.24.0.post1"
python-multipart = "^0.0.6"
typing-inspect = "0.8.0"
typing-extensions = "4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
